# zorba-jdbc-module

./: CMakeLists.txt  path.txt
config/: UtilJavaUse.cmake
include/: affectedrows.h  clearparams.h  closedataset.h  closeprepared.h  commit.h  connect.h  connectionoptions.h  disconnect.h  execute.h  executeprepared.h  executequery.h  executequerydeterm.h  executequeryprepared.h  executeupdate.h  executeupdateprepared.h  instancemap.h  isconnected.h  javaids.h  jdbc.h  jsonitemsequence.h  metadata.h  parametermetadata.h  preparestatement.h  resultset.h  rollback.h  setboolean.h  setnull.h  setnumeric.h  setstring.h  setvalue.h  sqltypes.h  tables.h
setup/: my.cnf  mysql-setup.sh
src/: CMakeLists.txt  jdbc.xq
src/jdbc.xq.src/: instancemap.cpp  javaids.cpp  jdbc.cpp  jsonitemsequence.cpp  sqltypes.cpp
src/jdbc.xq.src/connection/: connect.cpp  connectionoptions.cpp  disconnect.cpp  isconnected.cpp  tables.cpp
src/jdbc.xq.src/datasets/: affectedrows.cpp  closedataset.cpp  metadata.cpp  resultset.cpp
src/jdbc.xq.src/prepared/: clearparams.cpp  closeprepared.cpp  executeprepared.cpp  executequeryprepared.cpp  executeupdateprepared.cpp  parametermetadata.cpp  preparestatement.cpp  setboolean.cpp  setnull.cpp  setnumeric.cpp  setstring.cpp  setvalue.cpp
src/jdbc.xq.src/statements/: execute.cpp  executequery.cpp  executequerydeterm.cpp  executeupdate.cpp
test/ExpQueryResults/: 03-connect-options.xml.res  04-set-null-mariadb.xml.res  04-set-null.xml.res  05-result-set.xml.res
test/Queries/: 01-creatingDB.xq  02-select.xq  03-connect-options.xq  04-set-null.spec  04-set-null.xq  05-result-set.xq  06-prepare.xq  07-prepare.xq  08-deletingDB.xq  jdbcA.xq  jdbcB.xq  jdbcC.xq  jdbcD.xq  jdbcE.xq  jdbcF.xq  jdbcG.xq  jdbcH.xq
(+2 files in other folders)
